--- a/Lab2_Turn5/app/src/main/res/layout/activity_main.xml
+++ b/Lab2_Turn5/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,12 +9,26 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="luunt.lab2_turn5.MainActivity">
 
     <luunt.lab2_turn5.CircleView
         android:id="@+id/cv_draw"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
     
-    <
-</RelativeLayout>
+    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_below="@id/cv_draw"
+        android:layout_gravity="center"
+        app:dsb_min="0"
+        app:dsb_max="100"
+        app:dsb_value="30"
+        app:dsb_progressColor="@color/colorPrimary"
+        app:dsb_indicatorColor="@color/colorAccent" />
+
+</LinearLayout>
