--- a/Lab2_Turn5/app/src/main/res/layout/activity_main.xml
+++ b/Lab2_Turn5/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
@@ -9,26 +9,30 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="luunt.lab2_turn5.MainActivity">
 
     <luunt.lab2_turn5.CircleView
         android:id="@+id/cv_draw"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="300dp"/>
     
     <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
         android:id="@+id/seek_bar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_below="@id/cv_draw"
+        android:layout_height="100dp"
         android:layout_gravity="center"
         app:dsb_min="0"
         app:dsb_max="100"
-        app:dsb_value="30"
+        app:dsb_value="10"
         app:dsb_progressColor="@color/colorPrimary"
-        app:dsb_indicatorColor="@color/colorAccent" />
+        app:dsb_indicatorColor="@color/colorAccent"
+        android:layout_below="@id/cv_draw"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_change"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/change"
+        android:layout_below="@id/seek_bar"/>
+
+</RelativeLayout>
