--- a/Pets/Pets-android/app/src/main/res/layout/activity_login.xml
+++ b/Pets/Pets-android/app/src/main/res/layout/activity_login.xml
@@ -1,132 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_login_screen"
-    android:orientation="vertical">
+    android:background="@drawable/background_login_screen">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/space_30"
-        android:layout_marginRight="@dimen/space_30">
-
-        <ImageView
-            android:id="@+id/img_username"
-            android:layout_width="@dimen/space_40"
-            android:layout_height="@dimen/space_40"
-            android:background="@drawable/ic_log_in_user_name" />
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/activity_login_edt_username"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_40"
-            android:hint="@string/username"
-            android:textColorHint="@color/default_text_color"
-            android:textColor="@color/default_text_color"
-            android:background="@color/color_edittext_background"
-            android:layout_toRightOf="@id/img_username"
-            android:paddingLeft="@dimen/space_10"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/space_30"
-        android:layout_marginRight="@dimen/space_30"
-        android:layout_marginTop="@dimen/space_20">
-
-    <ImageView
-        android:id="@+id/img_pass"
-        android:layout_width="@dimen/space_40"
-        android:layout_height="@dimen/space_40"
-        android:background="@drawable/ic_log_in_pass" />
-
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/activity_login_edt_pass"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/space_40"
-        android:hint="@string/password"
-        android:textColorHint="@color/default_text_color"
-        android:textColor="@color/default_text_color"
-        android:background="@color/color_edittext_background"
-        android:layout_toRightOf="@id/img_pass"
-        android:paddingLeft="@dimen/space_10"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/space_30"
-        android:layout_marginRight="@dimen/space_30"
-        android:layout_marginTop="@dimen/space_20"
-        android:layout_gravity="center_horizontal">
-
-        <android.support.v7.widget.AppCompatCheckBox
-            android:id="@+id/activity_login_checkbox_keep_login"
-            android:button="@drawable/checkbox_selector"
-            style="@style/check_box_standard"/>
-
-        <android.support.v7.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/space_25"
-            android:layout_toRightOf="@id/activity_login_checkbox_keep_login"
-            android:text="@string/keep_me_logged_in"
-            android:textColor="@color/default_text_color"
-            android:layout_marginLeft="@dimen/space_10"
-            android:gravity="center"/>
-
-    </RelativeLayout>
-
-        <com.gvn.pets.widget.CustomButtonBlack
-            android:id="@+id/activity_login_btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:text="@string/log_in"
-            android:background="@color/bg_btn_signup_normal"
-            android:textAllCaps="false"
-            android:textColor="@color/default_text_color"
-            android:layout_marginTop="@dimen/space_20"
-            android:layout_marginLeft="@dimen/space_30"
-            android:layout_marginRight="@dimen/space_30"/>
-
-        <com.gvn.pets.widget.CustomButtonBlack
-            android:id="@+id/activity_login_btn_forgot_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/bg_btn_signup_normal"
-            android:layout_marginTop="@dimen/space_20"
-            android:text="@string/forgot_password"
-            android:textAllCaps="false"
-            android:textColor="@color/default_text_color"
-            android:layout_marginLeft="@dimen/space_30"
-            android:layout_marginRight="@dimen/space_30"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <android.support.v7.widget.AppCompatButton
+    <com.gvn.pets.widget.FontButton
         android:id="@+id/activity_login_btn_cancel"
         android:layout_width="@dimen/space_120"
         android:layout_height="@dimen/space_50"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:background="@drawable/ic_cancel"
-        android:text="Cancel"
+        android:text="@string/cancel"
         android:textAllCaps="false"
         android:textColor="@color/default_text_color"
-        android:layout_gravity="center"/>
+        android:textSize="@dimen/text_3_14sp" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/spacing_5_40dp"
+            android:layout_marginLeft="@dimen/spacing_5_40dp"
+            android:layout_marginRight="@dimen/spacing_5_40dp">
+
+            <ImageView
+                android:id="@+id/img_username"
+                android:layout_width="@dimen/spacing_5_40dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/ic_log_in_user_name" />
+
+            <com.gvn.pets.widget.FontEditext
+                android:id="@+id/activity_login_edt_username"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/img_username"
+                android:background="@color/color_edittext_background"
+                android:hint="@string/username"
+                android:inputType="textPersonName"
+                android:paddingLeft="@dimen/spacing_1_8dp"
+                android:textColor="@color/default_text_color"
+                android:textColorHint="@color/default_text_color"
+                android:textSize="@dimen/text_3_14sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/spacing_5_40dp"
+            android:layout_marginLeft="@dimen/spacing_5_40dp"
+            android:layout_marginRight="@dimen/spacing_5_40dp"
+            android:layout_marginTop="@dimen/spacing_3_24dp">
+            <ImageView
+                android:id="@+id/img_pass"
+                android:layout_width="@dimen/spacing_5_40dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/ic_log_in_pass" />
+
+            <com.gvn.pets.widget.FontEditext
+                android:id="@+id/activity_login_edt_pass"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/img_pass"
+                android:background="@color/color_edittext_background"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:paddingLeft="@dimen/spacing_1_8dp"
+                android:textColor="@color/default_text_color"
+                android:textColorHint="@color/default_text_color"
+                android:textSize="@dimen/text_3_14sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="@dimen/spacing_5_40dp"
+            android:layout_marginRight="@dimen/spacing_5_40dp"
+            android:layout_marginTop="@dimen/spacing_3_24dp">
+
+            <android.support.v7.widget.AppCompatCheckBox
+                android:id="@+id/activity_login_checkbox_keep_login"
+                style="@style/check_box_standard"
+                android:button="@drawable/checkbox_selector" />
+
+            <com.gvn.pets.widget.FontTextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/space_25"
+                android:layout_marginLeft="@dimen/space_10"
+                android:layout_toRightOf="@id/activity_login_checkbox_keep_login"
+                android:gravity="center"
+                android:text="@string/keep_me_logged_in"
+                android:textColor="@color/default_text_color"
+                android:textSize="@dimen/text_3_14sp" />
+
+        </RelativeLayout>
+
+        <com.gvn.pets.widget.FontButton
+            android:id="@+id/activity_login_btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/spacing_5_40dp"
+            android:layout_marginLeft="@dimen/spacing_5_40dp"
+            android:layout_marginRight="@dimen/spacing_5_40dp"
+            android:layout_marginTop="@dimen/spacing_3_24dp"
+            android:background="@color/bg_btn_signup_normal"
+            android:text="@string/log_in"
+            android:textAllCaps="false"
+            android:textColor="@color/default_text_color"
+            android:textSize="@dimen/text_3_14sp" />
+
+        <com.gvn.pets.widget.FontButton
+            android:id="@+id/activity_login_btn_forgot_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/spacing_5_40dp"
+            android:layout_marginLeft="@dimen/spacing_5_40dp"
+            android:layout_marginRight="@dimen/spacing_5_40dp"
+            android:layout_marginTop="@dimen/spacing_3_24dp"
+            android:background="@color/bg_btn_signup_normal"
+            android:text="@string/forgot_password"
+            android:textAllCaps="false"
+            android:textColor="@color/default_text_color"
+            android:textSize="@dimen/text_3_14sp" />
+    </LinearLayout>
+
+</RelativeLayout>
