--- a/Pets/Pets-android/app/src/main/res/values/dimens.xml
+++ b/Pets/Pets-android/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="stroke_width">1dp</dimen>
     <dimen name="radius_button">@dimen/spacing_1_8dp</dimen>
     <dimen name="button_width_signup">146dp</dimen>
-
+    <dimen name="button_width_facebook_login">280dp</dimen>
     <dimen name="spacing_0_4dp">4.0dip</dimen>
     <dimen name="spacing_1_6dp">6.0dip</dimen>
     <dimen name="spacing_1_8dp">8.0dip</dimen>
