--- a/Lab_6/app/src/main/res/layout/fragment_create_note.xml
+++ b/Lab_6/app/src/main/res/layout/fragment_create_note.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/activity_horizontal_margin"
     tools:context="com.example.chihirohaku.lab_6.fragments.CreateNoteFragment"
     android:id="@+id/fr_create_note">
 
@@ -10,25 +9,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:weightSum="1">
 
         <EditText
             android:id="@+id/edt_create_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title" />
+            android:hint="@string/title"
+            android:background="@drawable/bg_edt"
+            android:padding="10dp"/>
 
         <EditText
             android:id="@+id/edt_create_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:hint="@string/content"
-            android:maxLines="4"/>
+            android:singleLine="false"
+            android:background="@drawable/bg_edt"
+            android:padding="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="0.34" />
 
         <Spinner
             android:id="@+id/sp_color"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"/>
 
     </LinearLayout>
     
@@ -37,6 +45,9 @@
         android:src="@drawable/ic_check"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_gravity="bottom|right"/>
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:tint="@android:color/holo_green_light"/>
 
 </FrameLayout>
