--- a/Lab_6/app/src/main/res/layout/fragment_login.xml
+++ b/Lab_6/app/src/main/res/layout/fragment_login.xml
@@ -23,7 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_username"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:background="@drawable/bg_edt"
+            android:padding="10dp"/>
 
         <TextView
             android:id="@+id/tv_pass"
@@ -38,7 +40,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_pass"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:background="@drawable/bg_edt"
+            android:padding="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
