--- a/Lab_6/app/src/main/res/layout/fragment_note.xml
+++ b/Lab_6/app/src/main/res/layout/fragment_note.xml
@@ -16,6 +16,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_add_note"
-        android:layout_gravity="bottom|right"/>
+        android:layout_gravity="bottom|right"
+        android:tint="@android:color/holo_green_light"/>
 
 </FrameLayout>
