--- a/Lab_6/app/src/main/res/layout/item_list_note.xml
+++ b/Lab_6/app/src/main/res/layout/item_list_note.xml
@@ -2,7 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_item_note"
+    android:layout_margin="5dp"
+    android:padding="10dp"
+    android:id="@+id/ll_item_note">
 
     <TextView
         android:id="@+id/tv_title"
