--- a/Lab_6/app/src/main/res/layout/fragment_create_note.xml
+++ b/Lab_6/app/src/main/res/layout/fragment_create_note.xml
@@ -36,7 +36,7 @@
             android:id="@+id/sp_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp" />
 
     </LinearLayout>
     
@@ -48,6 +48,6 @@
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:tint="@android:color/holo_green_light"/>
+        android:tint="@color/green"/>
 
 </FrameLayout>
