--- a/Lab_6/app/src/main/res/values/colors.xml
+++ b/Lab_6/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue">#0091EA</color>
     <color name="violet">#EA80FC</color>
     <color name="shit">#CDDC39</color>
+    <color name="green">#4CAF50</color>
 </resources>
