--- a/Lab_6/app/src/main/res/layout/fragment_create_note.xml
+++ b/Lab_6/app/src/main/res/layout/fragment_create_note.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,18 +37,19 @@
             android:id="@+id/sp_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"/>
 
     </LinearLayout>
     
-    <ImageView
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/img_check"
         android:src="@drawable/ic_check"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom|right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:tint="@color/green"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@android:color/holo_red_dark" />
 
-</FrameLayout>
+</RelativeLayout>
