--- a/Lab_6/app/src/main/res/layout/activity_note.xml
+++ b/Lab_6/app/src/main/res/layout/activity_note.xml
@@ -17,8 +17,10 @@
         android:layout_height="match_parent" >
 
         <android.support.design.widget.TabLayout
+            android:id="@+id/tablayout_note"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:tabBackground="@drawable/bg_edt" />
 
     </android.support.v4.view.ViewPager>
 
