--- a/Lab_6/app/src/main/res/values/colors.xml
+++ b/Lab_6/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="violet">#EA80FC</color>
     <color name="shit">#CDDC39</color>
     <color name="green">#4CAF50</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
