--- a/Lab_6/app/src/main/res/layout/activity_note.xml
+++ b/Lab_6/app/src/main/res/layout/activity_note.xml
@@ -11,22 +11,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.chihirohaku.lab_6.activities.NoteActivity">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_Note"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tablayout_note"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabBackground="@drawable/bg_edt" />
-
-    </android.support.v4.view.ViewPager>
-
     <FrameLayout
         android:id="@+id/fr_note"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </FrameLayout>
 
 </RelativeLayout>
