--- a/MusicApp/app/src/main/res/layout/activity_main.xml
+++ b/MusicApp/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryLight"
     tools:context="com.example.chihirohaku.musicapp.activities.MainActivity">
 
-    <android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolBar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="@color/colorPrimary">
-        </android.support.v7.widget.Toolbar>
         <FrameLayout
             android:id="@+id/fr_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="?actionBarSize"
-            android:background="@color/colorPrimaryLight"/>
-    </android.support.design.widget.CoordinatorLayout>
-</RelativeLayout>
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <fragment
+            android:id="@+id/fragment_mini_player"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:name="com.example.chihirohaku.musicapp.fragments.MiniPlayerFragment" />
+
+</LinearLayout>
