--- a/Observertest/app/src/main/res/layout/activity_main.xml
+++ b/Observertest/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="luunt.observertest.MainActivity">
 
-    <Button
-        android:id="@+id/btn_onClick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="onClick" />
-
-    <TextView
-        android:id="@+id/tv_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_onClick"
-        android:layout_marginTop="20dp"
-        android:text="before change"/>
+    <FrameLayout
+        android:id="@+id/fr_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
