--- a/MusicApp/app/src/main/res/layout/fragment_mini_player.xml
+++ b/MusicApp/app/src/main/res/layout/fragment_mini_player.xml
@@ -30,7 +30,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_pause_circle_filled_black_24px"
+            android:background="@drawable/ic_pause_circle_filled_black_24px"
             android:layout_centerInParent="true"/>
 
         <ScrollView
